src/index.css
/* body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
} */

/* body {
  background-image: url('https://images.unsplash.com/photo-1509807995916-c332365e2d9e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1942&q=80');
  background-position: fixed;
} */

.showFavorite {
  display: block;
  
  }
  
  .hideFavorite {
  display: none;
  
  }
  
  .container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    flex-direction: row;
    width: 100%;
  }
  
  header {
    width: 100%;
    /*3 drinks*/
    /* background-image: url('https://images.unsplash.com/photo-1551024709-8f23befc6f87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80'); */
    /* whiskey */
    /* background-image: url('https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60'); */
    background-image: url('https://images.unsplash.com/photo-1509807995916-c332365e2d9e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1942&q=80');
    display: flex;
    background-size: cover;
    color: white;
    text-shadow: 4px 4px 5px black;
    justify-content: center;
    align-items: center;
    height: 200px;
    background-position-y: -150px;
    font-size: 40px;
  }
  
  h1 {
    font-family: 'Playfair Display SC', serif;
    font-size: 70px;
  }
  
  .card {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    height: 400px;
    box-shadow: 5px 5px 13px gray;
    background-color: rgb(243, 247, 244);
    /* margin: 5px; */
  }
  
  .col.s12.m6.l4 {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    /* width: 400px; */
  }
  
  .drink {
    margin: 50px;
    font-size: 20px;
  }
  
  .addDrink {
    width: 20%;
  }
  
  h2 {
    font-size: 20px;
    font-family: 'Montserrat', sans-serif;
  }
  
  img {
    /* width: 30%; */
    height: 150px;
    border: double grey 5px;
  }
  
  .card-image {
    /* width: 100%; */
    /* width: 200px; */
    width: 100%;
  }
  
  .card-action {
    text-align: center;
  }
  
  .card-content {
    text-align: center;
  }
  .show {
    width: 100%;
  }
  
  form {
    margin: 5px;
    width: 100%;
  }
  
  .btn {
    /* background-color: rgb(110, 128, 161); */
    background-color: rgb(211, 212, 218);
    color: black;
    border: 1px solid gray;
    font-size: 12px;
  }
  
  .btn:hover {
    background-color: rgb(58, 56, 56);
    color: white;
  }
  
  #add, #random {
    display: flex;
    margin: 15px;
    justify-content: left;
  }
  
  .submit {
    background-color: rgb(211, 212, 218);
    color: black;
    border: 1px solid gray;
    font-size: 12px;
  }

  .details {
    width: 80%;
    background-color: rgb(243, 247, 244);
    padding: 10px;
    font-family: 'Montserrat', sans-serif;
    flex-direction: column;
  }

/* div {
  display: flex;
  width:100%;
} */

